Add issues and telecom part to literature study

--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -5,11 +5,11 @@
 \label{ch:literature-study}
 
 \section{What is a chatbot?}
-A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{nlu} , \acrfull{nlg} (\cite{Adamopoulou2020}), \acrfull{ai} and \acrfull{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is what is called \acrfull{hci} (\cite{Adamopoulou2020}).  \acrshort{hci} is most likely to become the most widely researched topic in the \acrshort{ai} community (\cite{Bansal2018}). Chatbots are used in a verity of sectors. Some examples are education, health and of course e-commerce.\\
+A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{nlu} , \acrfull{nlg} (\cite{Adamopoulou2020}), \acrfull{ai} and \acrfull{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is what is called \acrfull{hci} (\cite{Adamopoulou2020}).  \acrshort{hci} is most likely to become the most widely researched topic in the \acrshort{ai} community (\cite{Bansal2018}). Chatbots are used in a variety of sectors such as education, health and of course e-commerce.\cite{Goot2020CustomerSC}\\
 \break
-The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” (Chatbot |Definition of chatbot in English by Lexico Dictionaries, 2019). [Add some more technical definitions]\\
+The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” (Chatbot |Definition of chatbot in English by Lexico Dictionaries, 2019). \textbf{[Add some more technical definitions]}\\
 \break
-Multiple types chatbots exist, going from text based to voice based to a combination of both (\cite{Radziwil2021}). Below is a more detailed taxonomy about chatbots.\\
+Multiple types of chatbots exist, going from text-based to voice-based to a combination of both (\cite{Radziwil2021}). Below is a more detailed taxonomy of chatbots.\\
 
 \subsection{Taxonomy of a chatbot}
 There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots (\cite{Adamopoulou2020}). In this research, the focus will be on the interactive agents, since most e-commerce chatbots are interactive agents.\\
@@ -40,8 +40,6 @@ This categorisation results in task- and non-task-oriented chatbots. The latter 
 	\item Zalando chatbot
 \end{enumerate}
 
-\section{Customers’ expectations of communication with a company}
-
 \section{User experiences with e-commerce chatbots}
 \subsection{How to interpret user experiences?}
 In the past, customers could only make complaints and queries through mail or through a form. From 2016, this changed with the rise of AI and the transition from online social networks to mobile messaging applications such as Messenger, WhatsApp, etc. Service providers tried to respond to this change by introducing chatbots for customer service (\cite{Brandtzaeg2018}).\\
@@ -58,7 +56,7 @@ The study "Humanizing chatbots: The effects of visual, identity and conversation
 The efficiency and effectiveness in performing a productive task is considered an important and crucial factor by consumers who are using a chatbot. The purpose of the chatbot is to make the user's life easier and more productive (\cite{Brandtzaeg2018}).\\
 \break
 \ul{Empathy}\\
-The study “Exploring consumers' response to text-based chatbots in e-commerce: the moderating role of task complexity and chatbot disclosure” (\cite{Cheng2021}) concludes that empathic factor of the chatbot is important for successful interactions. The empathic factor of a chatbot makes the user's perspective more appreciated, it also makes it more responsive to the specific needs of the consumer.\\
+The study “Exploring consumers' response to text-based chatbots in e-commerce: the moderating role of task complexity and chatbot disclosure” (\cite{Cheng2021}) concludes that empathetic factor of the chatbot is important for successful interactions. The empathetic factor of a chatbot makes the user's perspective more appreciated, it also makes it more responsive to the specific needs of the consumer.\\
 \break
 \ul{Task complexity}\\
 The difficulty of a task given to the chatbot has a negative effect on consumer confidence. If the task is complex, the customer will have less confidence that the task will be completed successfully (\cite{Cheng2021}).\\
@@ -75,18 +73,18 @@ Message interactivity in a conversation can be understood as the level of contin
 If a user interacts with an agent who has the same characteristics as him/herself (homogeneity), then the user will view the agent as positive. Studies have found that an agent with human characteristics is considered "better" than an agent with less human characteristics (\cite{Go2019,Koda1996,Wexelblat1998}). 
 
 \section{What makes users trust a customer service chatbot?}
-Customer trust is a crucial factor in customer service, and it is important that the customer accepts the agent's feedback as qualitative information. If the customer were to question the communication with the company, this could potentially lead to the loss of potential purchases. Measuring customer trust in a chatbot has already been investigated by Følstad et al (\cite{Følstad2018}). The research provides insight into different aspects of consumer trust within customer service.\\
+Customer trust is a crucial factor in customer service, and it is important that the customer accepts the agent's feedback as qualitative information. If the customer were to question the communication with the company, this could potentially lead to the loss of potential purchases. Measuring customer trust in a chatbot has already been investigated by Følstad et al (\cite{Folstad2018}). The research provides insight into different aspects of consumer trust within customer service.\\
 
 \subsection{Interpretation of question}
-The fact that the chatbot may not be able to interpret the questions correctly is a possible threat to the qualitative handling of a problem/question. If the questions are misinterpreted, it is possible that the chatbot shares wrong information. According to past research, consumers are more sceptical about the feedback from a chatbot when asked a complex question (\cite{Følstad2018,Nordheim2019}).\\
+The fact that the chatbot may not be able to interpret the questions correctly is a possible threat to the qualitative handling of a problem/question. If the questions are misinterpreted, it is possible that the chatbot shares wrong information. According to past research, consumers are more skeptical about the feedback from a chatbot when asked a complex question (\cite{Folstad2018,Nordheim2019}).\\
 
 \subsection{Self-presentation}
-A chatbot that reveals its weaknesses and limits are considered more trustworthy by consumers. The consumer gets a better idea of what may be asked and how confidential the information may be (\cite{Følstad2018}).
+A chatbot that reveals its weaknesses and limits are considered more trustworthy by consumers. The consumer gets a better idea of what may be asked and how confidential the information may be (\cite{Folstad2018}).
 
 \subsection{Security and privacy}
-The consumer expects the chatbot to meet certain security levels, especially when the chatbot handles transactions that may contain personal data. The user assumes that the service provider is responsible when the chatbot fails to support transactions (\cite{Følstad2018, Nordheim2019}).\\
+The consumer expects the chatbot to meet certain security levels, especially when the chatbot handles transactions that may contain personal data. The user assumes that the service provider is responsible when the chatbot fails to support transactions (\cite{Folstad2018, Nordheim2019}).\\
 \break
-Since the existence of \acrfull{gdpr}, users' views on giving up personal data to machines have changed, this transition is also noticeable in chatbots. Users of chatbots want to know what happens to their data and how it is stored, they expect as little personal data as possible to be stored (\cite{Følstad2018, Nordheim2019}). 
+Since the existence of \acrfull{gdpr}, users' views on giving up personal data to machines have changed, this transition is also noticeable in chatbots. Users of chatbots want to know what happens to their data and how it is stored, they expect as little personal data as possible to be stored (\cite{Folstad2018, Nordheim2019}). 
 
 
 \section{Key Attributes and components of a successful e-commerce chatbot}
@@ -105,10 +103,10 @@ This category is all about protection and the respect of privacy and making sure
 The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Graphical Appearance}
-Graphical Appearance is all about the design and feel of the user interface and the use of emojis and gifs in conversations (\cite{Muizzah2021, Verkeyn2018}).\\
+Graphical Appearance is all about the design and feel of the user interface and the use of emojis and GIFs in conversations (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Humanity}
-The humanity dimension shows how humanlike the chatbot is. The attributes are about how real the chatbot feels, if it creates and enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer (\cite{Muizzah2021, Verkeyn2018}).\\
+The humanity dimension shows how human-like the chatbot is. The attributes are about how real the chatbot feels, if it creates and enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Empathy}
 Empathy is about personalised options and suggestions (\cite{Muizzah2021, Verkeyn2018}).\\
@@ -142,7 +140,7 @@ By putting these attributes through \acrfull{ahp}, 7 main dimensions are found. 
 	\label{tab:ChatbotAttributes}
 \end{longtable}
 
-These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html }  as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured (\cite{Muizzah2021}).\\
+These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html} as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured (\cite{Muizzah2021}).\\
 \break
 Depending on the goal you want to reach, the focus on the most important characteristics will shift (\cite{Radziwil2021}). Overall, accessibility and efficiency come out to be the most important dimensions of a chatbot (\cite{Radziwil2021}). Both (\cite{Muizzah2021}) and (\cite{Radziwil2021}) confirm these results.\\
 
@@ -156,9 +154,43 @@ Depending on the goal you want to reach, the focus on the most important charact
 	Usability       & \begin{tabular}[c]{@{}c@{}}Understandability\\ Learnability\\ Operability\\ Attractiveness\\ Usability compliance\end{tabular} \\ \hline
 	Efficiency                                     & \begin{tabular}[c]{@{}c@{}}Time behaviour\\ Resource utilisation\\ Efficiency compliance\end{tabular}        \\ \hline
 	Maintainability & \begin{tabular}[c]{@{}c@{}}Analysability\\ Changeability\\ Stability\\ Testability\\ Maintainability compliance\end{tabular}   \\ \hline
-	Portability     & \begin{tabular}[c]{@{}c@{}}Adaptability\\ Installability\\ Co-existance\\ Replaceability\\ Portability compliance\end{tabular} \\ \hline
+	Portability     & \begin{tabular}[c]{@{}c@{}}Adaptability\\ Installability\\ Co-existence\\ Replaceability\\ Portability compliance\end{tabular} \\ \hline
 	\caption{the ISO/IEC 9126-1 internal/external quality model (\cite{ISO9126}).}
 	\label{tab:ISO9126}
 \end{longtable}
 
 \section{Issues and errors in the current generation of customer service chatbots}
+Even though the usage of chatbots can bring forth significant advantages, they are not free of drawbacks and threats. Below are highlighted some critical issues every company should take into account.
+
+\subsection{Privacy and data security}
+Many users who interact with a chatbot are scared that their data is being captured and (mis)used. Providers should take the right precautionary measures to ensure the safety of data and to inform for what the personal data will be used. Otherwise, the usage of a chatbot will be negatively impacted (\cite{Adamopoulou2020, Duka2021, Rese2020}).
+
+\subsection{Shortcomings of customer expectations}
+One of the biggest categories of mistakes are the shortcomings of customer expectations. This varies from failing to understand their request or intent, giving wrong answers, providing a poor quality of content as well as miscommunication errors. These issues leave a bad taste in the mouth of the customer and makes them not return to the company (\cite{Adamopoulou2020, Duka2021, Nichifor2021, Sheehan2020, Margot}).
+
+\subsection{Bias}
+Bias can be shown towards multiple facets such as race, gender and religion. When taking a closer look at gender, it is interesting to see that the bias comes from both directions. Chatbots can make biased remarks towards it's customers. At the same time study shows that the customer applies gender bias towards gender identified chatbots in the field of gender-stereotypical subject domains such as mechanics for male chatbots. It is important to reduce the bias as much as possible for a smoother interaction between both parties (\cite{Adamopoulou2020, McDonnell2019}). Gender neutral bots seem to receive high satisfaction ratings in comparison to male and female chatbots, even though they are generally perceived with more negative personality traits such as colder and less friendly (\cite{McDonnell2019}).
+
+\subsection{Toxic content and social harm}
+Toxic content is a severe drawback for customers. Getting insulted and getting racial slurs thrown at your head is the last thing a customer wants when interacting with a chatbot. This issue is mostly present with chatbots that use each conversation as a learning ground. Malicious users such as internet trolls can fully impact and transform the vocabulary used by the chatbot in a matter of hours (\cite{Adamopoulou2020}).\\
+\break
+Toxic content can be taken even a step further when applied to social network bots. An example might be a chatbot that tweets about racist things, claiming that someone has committed rape or abuse, murder etc. All of this is done with the intent to hurt someone or a group of people. This is all possible because these chatbots pass the Turing Test easily (\cite{Radziwil2021}).
+
+\subsection{Lack of knowledge about good and bad attribute types}
+It is difficult to tailor a chatbot to the exact need of the customers. This is due to the fact that there isn't a clear understanding about what the user deems important or critical as a success factor. The absence of knowledge on this front makes for a poor chatbot user experience (\cite{brandtzaeg2020}).
+
+\subsection{Not understanding the capabilities of the chatbot}
+When customers don't fully understand the capabilities of a chatbot, he can't optimally use the service provided. This may result in frustrations or unnecessary limitations due to the absence of knowledge. It is in a company's best intrest to clearly specify what capabilities their chatbot has (\cite{brandtzaeg2020}).
+
+\section{Customer service chatbots in the telecom industry: a deeper insight}
+The telecom sector is an industry where customer satisfaction is an important factor. The different companies within this sector provide the same kind of services and products which makes switching operators easy. According to the research by (\cite{Quintino2019}), the use of chatbots has a significant effect on customer satisfaction by ensuring better customer service. The findings from the research of \citeauthor{Quintino1019} were applied to Portuguese telecom companies, with this paper the line is further drawn into the Belgian telecom sector.\\
+\subsection{The Belgian telecom industry: market overview}
+The Belgian telecom sector is known as one of the most expensive in Europe, in the Eurostat survey conducted in 2019 it is even known as the most expensive in Europe (\cite{Eurostat2020}). The services offered by the telecom operators can be divided into 2 categories: fixed internet and mobile.\\
+\break
+According to the 2020 annual report published by the \acrfull{bipt}, Proximus is the market leader in both fixed internet (45.3\%) and mobile (39\%). Telenet is in second place in both categories; for fixed Internet they have a market share of 35.6\%, for mobile this is 26\%. There is also a 3rd player that has been growing in recent years, Orange has a market share of 7.2\% in the fixed internet and +/- 26\% in the mobile market. (\cite{BIPT2021,VanLeemputten2021}).\\
+
+\subsection{Challenges in the telecom industry}
+Telecom operators in general face several challenges that can cause such companies to go bust. According to research by \citeauthor{Quintino2019} (\cite{Quintino2019, Malviya2012}), the most important challenges in this sector are: determining the revenue stream, rapidly changing consumer demands. The various challenges have an overall effect on customer retention. The findings from Quintino's research are also confirmed in Joshi's research (\cite{Joshi2014}), in this paper, the parameters that affect the customer experience of cellular mobile services within the telecom industry of India are investigated (\cite{Joshi2014, Quintino2019, Malviya2012}).\\
+\break
+As in Quintino's study, this study will look at how the customer experience can be further optimised. It will be investigated how the chatbot can respond to the different challenges within the telecom sector. The results from this study can be used by telecom providers to further adjust their services to the needs of their (potential) customers.
+
