--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -2,6 +2,7 @@
 \pagestyle{headings}
 
 \chapter{Methodology}
+\label{ch:methodology}
 \section{Research Questions \& Hypotheses}
 To determine the influence of chatbots on the telecom industry, various questions must be asked of the industry's participants. These inquiries are predicated on a hypothesis from which we begin our investigation.\\
 \break
@@ -12,7 +13,7 @@ Even if reality suggests otherwise, the hypotheses are developed with a favourab
 Five research questions were formulated to answer this main research question:
 
 \subsubsection{RQ1: Are current customer service chatbots effective in helping people and solving their problems?}
-It is illogical to think that there will be people who will keep a good impression of a customer service chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective [WIP: complete studies].\\
+It is illogical to think that there will be people who will keep a good impression of a customer service chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective \textbf{[WIP: complete studies]}.\\
 In a task- oriented chatbot, under which a customer service chatbot can be placed, usefulness is key (\cite{brandtzaeg2020}). Solving problems and providing help in an effective and efficient manner is the key to providing a good user experience. It is also crucial that the user's intentions are correctly interpreted and answered adequately.\\
 \break
 \cite{Verkeyn2018} categorized 28 quality attributes and divided them up in 5 dimensions. Based on these quality attributes, the evaluation of a chatbot is possible (see literature study). Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
@@ -115,7 +116,7 @@ The research questions and hypotheses will be investigated/evaluated by means of
 \break
 To find out which of the chose 7 attributes types are seen as important, the following questions per category will be used.
 
-\subsubsection{Under "Effective in helping people and solving their problems"}
+\subsubsection{Under ``Effective in helping people and solving their problems"}
 \begin{enumerate}
 	\item Execute requested tasks
 	\begin{itemize}
