--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -327,7 +327,7 @@
 	url = {www.aaai.org},
 	year = {1998},
 }
-@inproceedings{Følstad2018,
+@inproceedings{Folstad2018,
 	abstract = {Chatbots are increasingly offered as an alternative source of customer service. For users to take up chatbots for this purpose, it is important that users trust chatbots to provide the required support. However, there is currently a lack in knowledge regarding the factors that affect users’ trust in chatbots. We present an interview study addressing this knowledge gap. Thirteen users of chatbots for customer service were interviewed regarding their experience with the chatbots and factors affecting their trust in these. Users’ trust in chatbots for customer service was found to be affected (a) by factors concerning the specific chatbot, specifically the quality of its interpretation of requests and advise, its human-likeness, its self-presentation, and its professional appearance, but also (b) by factors concerning the service context, specifically the brand of the chatbot host, the perceived security and privacy in the chatbot, as well as general risk perceptions concerning the topic of the request. Implications for the design and development of chatbots and directions for future work are suggested.},
 	author = {Asbjørn Følstad and Cecilie Bertinussen Nordheim and Cato Alexander Bjørkli},
 	doi = {10.1007/978-3-030-01437-7_16},
@@ -355,4 +355,129 @@
 	title = {An Initial Model of Trust in Chatbots for Customer Service - Findings from a Questionnaire Study},
 	volume = {31},
 	year = {2019},
+}
+@inproceedings{Duka2021,
+	author = {Isidora Đuka and Angelina Njeguš},
+	doi = {10.15308/sinteza-2021-322-327},
+	month = {7},
+	pages = {322-327},
+	publisher = {Singidunum University},
+	title = {Conversational Survey Chatbot: User Experience and Perception},
+	year = {2021},
+}
+@article{Rese2020,
+	abstract = {Currently, online retailers evaluate whether chatbots—software programs that interact with users using natural languages—could improve their customers' satisfaction. In a retail context, chatbots allow humans to pose shopping-related questions and receive answers in natural language without waiting for a salesperson or using other automated communication forms. However, until now, it has been unclear which customers accept this new communication form and which factors determine their acceptance. In this paper, we contrast the well-known technology acceptance model (TAM) with the lesser known uses and gratifications (U&G) theory, applying both approaches to measure the acceptance of the text-based “Emma” chatbot by its target segment. “Emma” was developed for the prepurchase phase of online fashion retailing and integrated into Facebook Messenger by the major German online retailer Zalando. Data were collected from 205 German Millennial respondents in a usability study. The results show that both utilitarian factors such as “authenticity of conversation” and “perceived usefulness,” as well as hedonic factors such as “perceived enjoyment”, positively influence the acceptance of “Emma”. However, privacy concerns and the immaturity of the technology had a negative effect on usage intention and frequency. The predictive power of both models was similar, showing little deviation, but U&G gives alternative insights into the customers’ motivation to use “Emma” compared to the TAM.},
+	author = {Alexandra Rese and Lena Ganster and Daniel Baier},
+	doi = {10.1016/j.jretconser.2020.102176},
+	issn = {09696989},
+	journal = {Journal of Retailing and Consumer Services},
+	month = {9},
+	publisher = {Elsevier Ltd},
+	title = {Chatbots in retailers’ customer communication: How to measure their acceptance?},
+	volume = {56},
+	year = {2020},
+}
+@article{Nichifor2021,
+	author = {Eliza Nichifor and Adrian Trifan and Elena Mihaela Nechifor},
+	doi = {10.24818/EA/2021/56/87},
+	issn = {15829146},
+	issue = {56},
+	journal = {Amfiteatru Economic},
+	pages = {87-101},
+	publisher = {Editura ASE Bucuresti},
+	title = {Artificial Intelligence in Electronic Commerce: Basic Chatbots and the Consumer Journey},
+	volume = {23},
+	year = {2021},
+}
+@article{Sheehan2020,
+	abstract = {Firms are deploying chatbots to automate customer service. However, miscommunication is a frequent occurrence in human-chatbot interaction. This study investigates the relationship between miscommunication and adoption for customer service chatbots. Anthropomorphism is tested as an account for the relationship. Two experiments compare the perceived humanness and adoption scores for (a) an error-free chatbot, (b) a chatbot seeking clarification regarding a consumer input and (c) a chatbot which fails to discern context. The results suggest that unresolved errors are sufficient to reduce anthropomorphism and adoption intent. However, there is no perceptual difference between an error-free chatbot and one which seeks clarification. The ability to resolve miscommunication (clarification) appears as effective as avoiding it (error-free). Furthermore, the higher a consumer's need for human interaction, the stronger the anthropomorphism - adoption relationship. Thus, anthropomorphic chatbots may satisfy the social desires of consumers high in need for human interaction.},
+	author = {Ben Sheehan and Hyun Seung Jin and Udo Gottlieb},
+	doi = {10.1016/j.jbusres.2020.04.030},
+	issn = {01482963},
+	journal = {Journal of Business Research},
+	keywords = {Anthropomorphism,Artificial conversational entities,Chatbots,Need for human interaction,Perceived humanness,Self-service technology},
+	month = {7},
+	pages = {14-24},
+	publisher = {Elsevier Inc.},
+	title = {Customer service chatbots: Anthropomorphism and adoption},
+	volume = {115},
+	year = {2020},
+}
+@report{Margot,
+	abstract = {The current qualitative interview study describes the communication journey of customers who wish to contact companies, and their evaluation of chatbot communication within this journey. Interviews were conducted with a sample (N=24) that was varied in terms of gender, age, educational level and household composition. Experiences with nine customer service chatbots were included. The analysis focuses on three stages in the journey: first, customers' prior expectations when contacting a company; second, their experiences during chatbot conversations, and third, their final conclusions about under which conditions customer service chatbots should be implemented, and the consequences of chatbot communication for customers' company perceptions. Implications for research and practice are discussed. 1 Introduction Developments in AI fundamentally alter how companies communicate with their customers [9]. Particularly in customer service, chatbots are increasingly implemented [7, 11, 12]. Customers who need information or who want to complain can type their questions in a dialogue screen (often looking like a chat interface), and receive answers in natural language. The essential characteristic of this type of communication is that, although the answers are automatically generated, the conversation is made to resemble a dialogue between humans [7]. Since this is a novel way of interacting with a company, the question arises how customers experience these conversations, and how this communication affects their company perceptions. The current qualitative interview study aims to shed light on these issues by describing the communication journey of customers who wish to contact companies, and their evaluation of chatbot communication within this journey. The analysis focuses on three stages in the journey: first, customers' prior expectations when contacting a company; second, their experiences during chat-bot conversations, and third, their final conclusions about under which conditions customer service chatbots should be implemented, and the consequences of chatbot communication for customers'company perceptions.},
+	author = {Margot J Van Der Goot and Laura Hafkamp and Zoë Dankfort},
+	keywords = {AI,Chatbots,Company perceptions,Customer service,Qualitative interview study,User experience},
+	title = {Customer Service Chatbots: A Qualitative Interview Study into Customers' Communication Journey},
+}
+
+@inproceedings{Goot2020CustomerSC,
+	title={Customer Service Chatbots: A Qualitative Interview Study into Customers’ Communication Journey},
+	author={Margot J. van der Goot and Laura Hafkamp and Zo{\"e} Dankfort},
+	year={2020}
+}
+
+@article{McDonnell2019,
+	abstract = {Chatbots are very much an emerging technology, and there is still much to learn about how conversational user interfaces will affect the way in which humans communicate not only with computers but also with one another. Further studies on anthropomorphic agents and the projection of human characteristics onto a system are required to further develop this area. Gender stereotypes operate a profound effect on human behaviour. The application of gender to a conversational agent brings along with it the projection of user biases and preconceptions. These feelings and perceptions about an agent can be used to develop mental models of a system. Users can be inclined to measure the success of a system based on their biases and emotional connections with the agent rather than that of the system's performance. There have been many studies that show how gender affects human perceptions of a conversational agent. However, there is limited research on the effect of gender when applied to a chatbot system. This chapter presents early results from a research study which indicate that chatbot gender does have an effect on users overall satisfaction and gender-stereotypical perception. Subsequent studies could focus on examining the ethical implications of the results and further expanding the research by increasing the sample size to validate statistical significance, as well as recruiting a more diverse sample size from various backgrounds and experiences. RESEARCH HIGHLIGHTS: Many studies have indicated how gender affects human perceptions of a conversational agent. However, there is limited research on the effect of gender when applied to a chatbot system. This research study presents early results which indicate that chatbot gender does have an effect on users overall satisfaction and gender-stereotypical perception. Users are more likely to apply gender stereotypes when a chatbot system operates within a gender-stereotypical subject domain, such as mechanics, and when the chatbot gender does not conform to gender stereotypes. This study raise ethical issues. Should we exploit this result and perpetuate the bias and stereotyping? Should we really have a male chatbot for technical advice bots? Is this perpetuating stereotyping, the dilemma being that a male version would elicit more trust?},
+	author = {Marian McDonnell and David Baxter},
+	doi = {10.1093/iwc/iwz007},
+	issn = {09535438},
+	issue = {2},
+	journal = {Interacting with Computers},
+	keywords = {chatbots,conversational user interfaces,gender stereotypes},
+	month = {3},
+	pages = {116-121},
+	publisher = {Oxford University Press},
+	title = {Chatbots and Gender Stereotyping},
+	volume = {31},
+	year = {2019},
+}
+@report{Quintino2019,
+	abstract = {The implementation of Artificial Intelligence technologies by companies is changing the nature of interactions with customers and it is seen as a business opportunity. The automation of repetitive and ordinary work is now possible, resulting in an increase of the productivity, creativity, and efficiency of organizations. However, there should be a preoccupation to understand the importance of the customer experience with the introduction of these innovations, not only because people react differently to technology, but also to ensure the overall brand impact is positive. The aim of this study is to investigate the chatbot perceived attributes impact in customer experience, by analyzing the effects of human-like design cues and customer satisfaction on this relationship, in the scope of telecommunications industry. In order to accomplish these goals, a cross-sectional online questionnaire was conducted. Findings from the quantitative data analysis indicated that both perceived technology attributes studied, Ease of Use and Usefulness, impact positively the customer experience. Overall, the effect of the chatbot attributes on the experience is mediated by the customer's satisfaction with the chatbot and has no different effects depending on the presence of human-like design cues in the chatbot.},
+	author = {Ana Rita Parcelas Quintino},
+	keywords = {chatbot,customer experience,customer satisfaction,telecommunications III},
+	title = {The impact of chatbot technology attributes on customer experience: an example in telecom},
+	url = {https://repositorio.ucp.pt/handle/10400.14/29277},
+	year = {2019},
+}
+@report{BIPT2021,
+	author = {BIPT},
+	title = {Jaarverslag 2020},
+	url = {https://www.bipt.be/operatoren/publicatie/jaarverslag-2020},
+	year = {2021},
+}
+@newspaper_article{VanLeemputten2021,
+	author = {Pieterjan Van Leemputten},
+	journal = {Data News},
+	title = {Proximus blijft marktleider op vast en mobiel},
+	url = {https://datanews.knack.be/ict/nieuws/proximus-blijft-marktleider-op-vast-en-mobiel/article-news-1741129.html},
+	year = {2021},
+}
+@web_page{Eurostat2020,
+	author = {Eurostat},
+	journal = {Eurostat},
+	month = {12},
+	title = {How communication prices vary across the EU},
+	url = {https://ec.europa.eu/eurostat/web/products-eurostat-news/-/ddn-20201221-1},
+	year = {2020},
+}
+@article{Joshi2014,
+	abstract = {Abstract The cellular mobile industry in India is undergoing rapid changes as a result of globalization and liberalization. As a result of fast growth and severe competition, customer retention and managing high churn rate are the most important challenges faced by telecom companies today. Customer retention can be achieved by identifying maximum revenue generating customers and managing the customer experience for such profitable customers.},
+	author = {Sujata Joshi},
+	doi = {10.1016/j.sbspro.2014.04.206},
+	issn = {18770428},
+	journal = {Procedia - Social and Behavioral Sciences},
+	month = {5},
+	pages = {392-399},
+	publisher = {Elsevier BV},
+	title = {Customer Experience Management: An Exploratory Study on the Parameters Affecting Customer Experience for Cellular Mobile Services of a Telecom Company},
+	volume = {133},
+	url = {https://www.sciencedirect.com/science/article/pii/S1877042814031164},
+	year = {2014},
+}
+@web_page{Malviya2012,
+	abstract = {Telecommunication services form the foundation of our connected lives in the Digital World. Today, Communication Service Providers (CSPs) have graduated from providing basic voice and telephony services to offering a host of entertainment and other value added services. However, despite the demand for these services, the telecom industry is grappling with multiple challenges, including falling voice revenues, rising network capital costs and a growing threat from Over-the-Top (OTT) players. Complicating these challenges is the fact that CSPs struggle to deliver an excellent customer experience resulting in high rates of customer churn. Compared to customer experience leaders such as Apple, Google, and Amazon that enjoy a Net Promoter Score (NPS) in the 70-80 range, CSPs report a NPS as low as 3 This paper explores the telecom industry's customer experience imperative in greater detail, evaluates the typical challenges of defining, measuring, and improving customer experience and concludes by presenting a value-driven approach to assess and prioritize customer experience improvement initiatives.},
+	author = {Rahul Malviya and Vyas Varma},
+	title = {A Value-based Approach to Improve Customer Experience},
+	url = {https://www.wipro.com/communications-/a-value-based-approach-to-improve-customer-experience-/},
+	year = {2012},
 }
