--- a/Thesis/LaTeX/ref.tex
+++ b/Thesis/LaTeX/ref.tex
@@ -1,7 +1,7 @@
 \clearpage
-\bibliographystyle{agsm}
+\bibliographystyle{abbrvnat}
 
-\bibliography{../LaTeX/bibliografie} 
+\bibliography{../LaTeX/bibliografie.bib} 
 \addcontentsline{toc}{chapter}{Bibliography}
 
 \vfill
